# github-repo-watcher

./: .gitignore  Cargo.toml  README.md  init.sql  query.json
src/: forks_query.graphql  lib.rs
