[package]
name = "github-repo-watcher"
version = "0.2.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
dotenv = "0.15.0"
serde_json = "1.0.97"
tokio_wasi = { version = "1", features = ["rt", "macros", "net", "time"]}
serde={version = "1", features = ["derive"]}
anyhow = "1.0.75"
flowsnet-platform-sdk ="0.1.3"
log = "0.4.14"
schedule-flows = "0.3.0"
chrono = "0.4.31"
github-flows = "0.7.0"
octocrab_wasi = { version = "0.19.1", features = ["wasi"], default-features = false }
csv = "1.3.0"
